adds allocationTime to build status
now we print (1) the time to allocate a pod for a build and (2) the
total time spent building/pushing the image(s)
