# api/openapi-spec/swagger.json
@@ -1896,8 +1896,12 @@
     ".ImageBuildStatus": {
       "type": "object",
       "properties": {
+        "allocationTime": {
+          "description": "AllocationTime is the total time spent allocating a build pod.",
+          "type": "string"
+        },
         "buildTime": {
-          "description": "BuildTime is the total time spend during the build process.",
+          "description": "BuildTime is the total time spent during the image build process.",
           "type": "string"
         },
         "conditions": {
